// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfResultsWithSelectedItemsNumber renders correctly with default props 1`] = `
<DocumentFragment>
  <span>
    <span>
       results
    </span>
  </span>
</DocumentFragment>
`;

exports[`NumberOfResultsWithSelectedItemsNumber renders correctly with numberOfSelected 1`] = `
<DocumentFragment>
  <span>
    5 of 
    <span>
       results
    </span>
  </span>
</DocumentFragment>
`;

exports[`NumberOfResultsWithSelectedItemsNumber renders correctly with numberOfSelected as 0 1`] = `
<DocumentFragment>
  <span>
    <span>
       results
    </span>
  </span>
</DocumentFragment>
`;
